src/objects/Actual_Sales_Line_Items__c.object
<CustomObject>
    <description>The line items on an order</description>
    <fields>
        <fullName>Color_Base__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field COLOR_BASE</description>
        <label>Color Base</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Brand__c</fullName>
        <label>Color Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Size__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field COLOR_SIZE  gallon quart .5 gallon?</description>
        <label>Color Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_code__c</fullName>
        <label>Color Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_colorant_1__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field COLOR_CLRNT1</description>
        <label>Color colorant 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_colorant_2__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field COLOR_CLRNT2</description>
        <label>Color colorant 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_colorant_3__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field COLOR_CLRNT3</description>
        <label>Color colorant 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_formula__c</fullName>
        <label>Color Formula</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_formula_in_one_field__c</fullName>
        <formula>Color_colorant_1__c   &amp;  &quot; ; &quot; &amp;  Color_colorant_2__c  &amp;  &quot; ; &quot; &amp;Color_colorant_3__c  &amp;  &quot; ; &quot; &amp; Color_colorant_4__c  &amp;  &quot; ; &quot; &amp; Color_colorant_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color formula in one field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_name__c</fullName>
        <label>Color Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Ref__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field CUST_NUMBER</description>
        <label>Customer Ref</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Amount__c</fullName>
        <formula>if(SAP_Order__r.Direct_order__c = True, Cost__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <formula>SAP_Order__r.Direct_order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Retail__c</fullName>
        <formula>Retail2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line #</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>Material ordered</description>
        <label>Material</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplier2__c</fullName>
        <formula>if(SAP_Order__r.Direct_order__c = True, 1,IF( SAP_Order__r.Order_date__c &lt;= DATE(2014,03,31), 1.35,1.18))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiplier formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>National_Retail__c</fullName>
        <description>National Retail to do retail down calculation</description>
        <label>National Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Acutal Sales Line Items</relationshipLabel>
        <relationshipName>Actual_Sales_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail2__c</fullName>
        <label>Retail2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <formula>If(ispickval(Status__c, &quot;Cancelled&quot;), 0,
If( Direct__c = True,  Direct_Amount__c ,
If( National_Retail__c &gt; 0, (( National_Retail__c -(National_Retail__c * 0.175))* Quantity__c ), 
   Cost__c * Multiplier__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Order__c</fullName>
        <label>SAP Order</label>
        <referenceTo>Actual_Sales__c</referenceTo>
        <relationshipLabel>Acutal Sales Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>Used for SAP interface to retrieve the colorant used to create the formula.  Reference field CUST_REGIO</description>
        <label>Sales Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tinted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>material_description__c</fullName>
        <description>description of the material ordered</description>
        <label>Material Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Actual Sales Line Item</label>
    <nameField>
        <label>Order Item Combo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actual Sales Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>